# go-docker-example

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.go
.github/workflows/: docker-image.yml
example-c/: CMakeLists.txt  Makefile
example-c/sources/: CMakeLists.txt  simple_lib.c  simple_lib.h
example-c/tests/: CMakeLists.txt  Makefile  test.c
example-c/tests/integration/: CMakeLists.txt  onestep.c
sources/: main.go
sources/model/: model.go
tests/: main_test.go
tests/model/: model_test.go
